--- a/multipage/contact.html
+++ b/multipage/contact.html
@@ -6,7 +6,7 @@
     <title>Contact</title>
   </head>
   <body>
-    <a href="/multipage/home.html"><b>Home</b></a>
+    <a href="/multipage/index.html"><b>Home</b></a>
     <a href=""><b>Contact</b></a>
     <a href="/multipage/more-in4.html"><b>More information</b></a>
     <h2>Liên hệ:</h2>
