--- a/multipage/contact.html
+++ b/multipage/contact.html
@@ -6,14 +6,18 @@
     <title>Contact</title>
   </head>
   <body>
-    <a href="/multipage/index.html"><b>Home</b></a>
+    <a href="/index.html"><b>Home</b></a>
     <a href=""><b>Contact</b></a>
     <a href="/multipage/more-in4.html"><b>More information</b></a>
     <h2>Liên hệ:</h2>
     <ol>
       <ul>
         <li>Qua trang cá nhân:</li>
-        <a href="https://www.facebook.com/profile.php?id=100024659705224" target="_blank">Trang cá nhân</a>
+        <a
+          href="https://www.facebook.com/profile.php?id=100024659705224"
+          target="_blank"
+          >Trang cá nhân</a
+        >
         <li>Qua mail:</li>
         <a href="mailto:datgame132@gmail.com">Bấm vào để nhắn tin</a>
       </ul>
