--- a/multipage/more-in4.html
+++ b/multipage/more-in4.html
@@ -6,7 +6,7 @@
     <title>More information</title>
 </head>
 <body>
-    <a href="/multipage/index.html"><b>Home</b></a>
+    <a href="/index.html"><b>Home</b></a>
   <a href="/multipage/contact.html"><b>Contact</b></a>
   <a href=""><b>More information</b></a>
   <h2>Nghề nghiệp <p>học sinh</p></p:p></h2>
